--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -35,7 +35,7 @@
         <maven.compiler.release>17</maven.compiler.release>
         <lombok.version>1.18.24</lombok.version>
         <mapstruct.version>1.5.1.Final</mapstruct.version>
-        <javassist.version>3.28.0-GA</javassist.version>
+        <javassist.version>3.29.0-GA</javassist.version>
         <shardingsphere.version>4.1.1</shardingsphere.version>
     </properties>
 
@@ -110,6 +110,11 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.10.RELEASE</version>
         </dependency>
     </dependencies>
 
