--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <maven.compiler.release>17</maven.compiler.release>
         <log4jdbc.version>1.16</log4jdbc.version>
         <springdoc.openapi.version>1.6.9</springdoc.openapi.version>
-        <io.swagger.version>1.6.4</io.swagger.version>
+        <swagger-api.version>2.2.1</swagger-api.version>
         <druid.version>1.2.10</druid.version>
         <hutool.version>5.8.1</hutool.version>
         <fastutil.version>8.5.8</fastutil.version>
