--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -115,6 +115,7 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
             <version>2.2.10.RELEASE</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
