--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -37,6 +37,7 @@
         <mapstruct.version>1.5.2.Final</mapstruct.version>
         <druid.version>1.2.11</druid.version>
         <querydsl.version>5.0.0</querydsl.version>
+        <blaze-persistence.version>1.6.6</blaze-persistence.version>
     </properties>
 
     <dependencies>
@@ -90,7 +91,7 @@
             <version>${mapstruct.version}</version>
             <scope>provided</scope>
         </dependency>
-<!--   整合es，在2.6.4版本，默认是4.3.x的 spring-data-elasticsearch，对应的es是7.15.2，可能需要降版本（本地是7.14系列）     -->
+        <!--   整合es，在2.6.4版本，默认是4.3.x的 spring-data-elasticsearch，对应的es是7.15.2，可能需要降版本（本地是7.14系列）     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
@@ -100,6 +101,19 @@
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
             <version>${querydsl.version}</version>
+        </dependency>
+        <!--   Blaze Persistence     -->
+        <dependency>
+            <groupId>com.blazebit</groupId>
+            <artifactId>blaze-persistence-integration-querydsl-expressions</artifactId>
+            <version>${blaze-persistence.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.blazebit</groupId>
+            <artifactId>blaze-persistence-integration-hibernate-5.6</artifactId>
+            <version>${blaze-persistence.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
