引入新的框架时，要权衡，不要为了使用而使用

--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -275,7 +275,8 @@
                             <goal>process</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <!--  target/generated-sources/annotations会自动被mark为source，所以改用这个目录  -->
+                            <outputDirectory>target/generated-sources/annotations</outputDirectory>
                             <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
                         </configuration>
                     </execution>
