package外置依赖Completed。But the server is still running with `unnamed module`

--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -115,6 +115,13 @@
             <version>${blaze-persistence.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <!--    netflix    -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.10.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
