--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -111,12 +111,6 @@
             <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-            <version>2.2.10.RELEASE</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <profiles>
@@ -181,10 +175,17 @@
                     <plugin>
                         <artifactId>maven-jar-plugin</artifactId>
                         <configuration>
+                            <!--   https://maven.apache.org/plugins/maven-jar-plugin/usage.html   -->
+                            <!--   https://maven.apache.org/shared/maven-archiver/examples/classpath.html   -->
+                            <archive>
+                                <manifest>
+                                    <addClasspath>true</addClasspath>
+                                </manifest>
+                            </archive>
                             <!--不打入jar包的文件类型或者路径-->
-                            <excludes>
-                                <exclude>config/**</exclude>
-                            </excludes>
+                            <!--<excludes>-->
+                            <!--    <exclude>config/**</exclude>-->
+                            <!--</excludes>-->
                         </configuration>
                     </plugin>
                     <!-- 拷贝项目所有依赖jar文件到构建lib目录下 -->
