--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,9 +3,12 @@
 
 name: Maven Package
 
+# on:
+#   release:
+#     types: [created]
+    
 on:
-  release:
-    types: [created]
+  push
 
 jobs:
   build:
