--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,6 +19,11 @@ jobs:
       packages: write
 
     steps:
+    - name: Delete Package Versions
+      uses: actions/delete-package-versions@v2.0.1
+      with:
+        min-versions-to-keep: 0
+
     - uses: actions/checkout@v3
     - name: Set up JDK 18
       uses: actions/setup-java@v3
