--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Delete Package Versions
       uses: actions/delete-package-versions@v2.0.1
       with:
-        min-versions-to-keep: 0
+        package-version-ids: 'MDc6UGFja2FnZTgzMDEzMQ==, MDc6UGFja2FnZTgzMDEzMg==, P_kwDOFOUqEc4AF-yq, MDc6UGFja2FnZTgzMDE0MA==, MDc6UGFja2FnZTgzMDEzMw==, MDc6UGFja2FnZTgzMDEzNQ==, MDc6UGFja2FnZTgzMDEzNA=='
+        min-versions-to-keep: 1
 
     - uses: actions/checkout@v3
     - name: Set up JDK 18
