Cann't publish an exist version?

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Delete Package Versions
       uses: actions/delete-package-versions@v3.0.0
       with:
-        package-version-ids: 'MDE0OlBhY2thZ2VWZXJzaW9uOTg2MjQ2MA==, MDE0OlBhY2thZ2VWZXJzaW9uOTg2MjQ1MQ==, MDE0OlBhY2thZ2VWZXJzaW9uOTg2MjQ1MA==, MDE0OlBhY2thZ2VWZXJzaW9uOTg2MjQ0OQ==, MDE0OlBhY2thZ2VWZXJzaW9uOTg2MjQ0OA==, MDE0OlBhY2thZ2VWZXJzaW9uOTg2MjQ0Nw=='
+        package-version-ids: 'PV_lADOFOUqEc4AF-yqzgFWQ3s, PV_lADOFOUqEc4ADKq8zgFWQ6Y, PV_lADOFOUqEc4ADKq3zgFWQ60, PV_lADOFOUqEc4ADKq2zgFWQ7U, PV_lADOFOUqEc4ADKq1zgFWQ6A, PV_lADOFOUqEc4ADKq0zgFWQ3k, PV_lADOFOUqEc4ADKqzzgFWQ3g'
         min-versions-to-keep: 1
 
     - uses: actions/checkout@v3
