Wait for Support multiple package names
The packageVersionId is identifier of publish and version, so it will change after delete and republish. wait for the support of `multiple packages`

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,12 +3,10 @@
 
 name: Maven Package
 
-# on:
-#   release:
-#     types: [created]
-    
 on:
-  push
+  release:
+    types: [created]
+    
 
 jobs:
   build:
@@ -19,11 +17,11 @@ jobs:
       packages: write
 
     steps:
-    - name: Delete Package Versions
-      uses: actions/delete-package-versions@v3.0.0
-      with:
-        package-version-ids: 'PV_lADOFOUqEc4ADKq3zgFWQ60,PV_lADOFOUqEc4ADKq2zgFWQ7U,PV_lADOFOUqEc4ADKq1zgFWQ6A,PV_lADOFOUqEc4ADKq0zgFWQ3k,PV_lADOFOUqEc4ADKqzzgFWQ3g'
-        min-versions-to-keep: 1
+#     - name: Delete Package Versions
+#       uses: actions/delete-package-versions@v3.0.0
+#       with:
+#         package-name: ''
+#         min-versions-to-keep: 1
 
     - uses: actions/checkout@v3
     - name: Set up JDK 18
