--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>eladmin-system</artifactId>
             <version>${project.core.version}</version>
         </dependency>
+        <!--   logging模块     -->
+        <dependency>
+            <groupId>com.lwohvye</groupId>
+            <artifactId>eladmin-logging</artifactId>
+            <version>${project.core.version}</version>
+        </dependency>
         <!--   tools模块     -->
         <dependency>
             <groupId>com.lwohvye</groupId>
