--- a/eladmin-tools/pom.xml
+++ b/eladmin-tools/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>eladmin</artifactId>
         <groupId>com.lwohvye</groupId>
-        <version>3.1.0</version>
+        <version>3.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
