--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <packaging>pom</packaging>
     <version>3.1.0-SNAPSHOT</version>
 
-    <name>EL-ADMIN 管理系统</name>
+    <name>Server Base</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
     <description>A Spring Boot Project With Jpa JWT Security and so on</description>
 
