--- a/unicorn-common/pom.xml
+++ b/unicorn-common/pom.xml
@@ -31,7 +31,7 @@
     <description>Common module with BaseConfig, Utils, QueryAnno and so on</description>
 
     <dependencies>
-        <!--Spring boot 核心-->
+        <!--Spring boot Data JPA-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -112,16 +112,6 @@
             <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
         </dependency>
 
-        <!-- Swagger UI 相关 -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-        </dependency>
-        <!--    his dependency helps ignoring @AuthenticationPrincipal in case its used on REST Controllers    -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-security</artifactId>
-        </dependency>
         <!--    enable the support of spring Pageable Type    -->
         <dependency>
             <groupId>org.springdoc</groupId>
