--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <log4jdbc.version>1.16</log4jdbc.version>
         <springdoc.openapi.version>1.6.6</springdoc.openapi.version>
         <druid.version>1.2.11</druid.version>
+        <hikaricp.version>5.0.1</hikaricp.version>
         <hutool.version>5.8.5</hutool.version>
         <fastutil.version>8.5.8</fastutil.version>
         <lombok.version>1.18.24</lombok.version>
@@ -122,7 +123,7 @@
                 <version>${redisson.version}</version>
             </dependency>
 
-            <!--监控sql日志-->
+            <!--监控sql日志 https://log4jdbc.brunorozendo.com/-->
             <dependency>
                 <groupId>org.bgee.log4jdbc-log4j2</groupId>
                 <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
