--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -35,7 +35,7 @@
         <maven.compiler.release>18</maven.compiler.release>
         <lombok.version>1.18.24</lombok.version>
         <mapstruct.version>1.5.2.Final</mapstruct.version>
-        <druid.version>1.2.11</druid.version>
+        <hikaricp.version>5.0.1</hikaricp.version>
         <kotlin.version>1.7.10</kotlin.version>
     </properties>
 
@@ -65,11 +65,6 @@
             <artifactId>unicorn-cd-generator</artifactId>
             <version>${project.core.version}</version>
         </dependency>-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>${druid.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
